Fix: overflow of license text

--- a/assets/styles/title.css
+++ b/assets/styles/title.css
@@ -1,4 +1,6 @@
 @page title {
+  margin: 1cm;
+
   @bottom-center {
     content: none;
   }
